[project]
name = "dicom-listener"
version = "0.1.0"
description = "DICOM Listener and Sorter"
requires-python = ">=3.12"
dependencies = [
    "pynetdicom",
    "psycopg2-binary",
    "pydicom",
    "pyyaml",
    "pika",
    "elasticsearch",
    "deid",
    "pandas",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dicomsorter"]
