[project]
name = "dicom-listener"
version = "0.1.0"
description = "DICOM Listener and Sorter"
requires-python = ">=3.12"
dependencies = [
    "pynetdicom",
    "psycopg2-binary",
    "pydicom",
    "pyyaml",
    "pika",
    "elasticsearch",
    "deid",
    "pandas",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dicomsorter"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma — conflicts with formatter
    "ISC001",  # Implicit string concat — conflicts with formatter
    "D203",    # One blank line before class docstring — conflicts with D211
    "D213",    # Multi-line docstring on second line — conflicts with D212
    "E501",    # Line length regulated by formatter
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO issue link
    "TRY003",  # Long exception messages
    "SIM102",  # Nested if
    "SIM108",  # Ternary operator
    # Pragmatic ignores for existing codebase
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "ANN",     # Type annotations — too invasive for existing code
    "N",       # Naming — medical/DICOM naming conventions used throughout
    "EM",      # Exception message formatting
    "FBT",     # Boolean trap — patterns used throughout
    "PLR",     # Pylint refactoring rules
    "C901",    # Complexity limit
    "TRY002",  # raise Exception — common pattern
    "DTZ",     # Datetime timezone — naive datetimes intentional for DICOM
    "BLE001",  # Broad exception catches are intentional for robustness
    "TRY301",  # Abstract raise to inner function
    "SLF001",  # Private member access — intentional in some places
    "S608",    # SQL injection — internal ORM with trusted inputs
    "S105",    # Hardcoded password — config defaults
    "S104",    # Binding to all interfaces — intentional for DICOM server
    "PLW0603", # global statement — used for multiprocessing worker init
    "D205",    # 1 blank line required between summary line and description
    "D415",    # First line should end with period
    "ARG001",  # Unused argument — callback signatures require fixed args
    "INP001",  # Implicit namespace package — src/ is a sub-package
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dicomsorter"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"test.py" = [
    "T201",    # print() is intentional in CLI scripts
    "S",       # Security checks not applicable to test scripts
]
"test_rt_package.py" = [
    "T201",    # print() is intentional in CLI scripts
]
"Query_ES_data.py" = [
    "T201",    # print() in standalone query script
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-ignore-comment = "warn"
invalid-return-type = "warn"
invalid-argument-type = "warn"
division-by-zero = "error"
redundant-cast = "warn"
invalid-method-override = "warn"
not-subscriptable = "warn"
call-non-callable = "warn"
unknown-argument = "warn"
unresolved-attribute = "warn"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.20",
]
